# Portfolio_Optimizer_CPP

./: .gitignore  CMakeLists.txt  README.md
data/: covariances.csv  results.csv  returns.csv  small_returns_expected_results.xlsx  ~$small_returns_expected_results.xlsx
data/results/: Covariances.csv  PortfolioReturns.csv
src/cpp/: csv.cpp  linearAlgebra.cpp  linearAlgebra.h  main.cpp  portfolio.cpp  portfolio.h  read_data.cpp  read_data.h
src/python/: test.ipynb  visualization.ipynb
